--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -6,5 +6,8 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: psf/black@stable
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Run black
+      uses: psf/black@stable
